--- a/blocks/image-list/image-list.css
+++ b/blocks/image-list/image-list.css
@@ -129,6 +129,30 @@ main .integration-free-solutions h3{
 
   }
 
+  main .tech-platform-logos .default-content-wrapper h4 {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 200;
+    text-align: center;
+    padding:30px 12% 30px 12%; 
+
+  }
+
+  main .integration-free-solutions .default-content-wrapper h4{
+    padding:30px 12% 30px 12%; 
+  }
+
+  main .compliances-logos .default-content-wrapper h4 {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 200;
+    text-align: center;
+    padding:30px 12% 0px 12%;
+
+  }
+
   main .image-list-container .default-content-wrapper h5 {
     display: flex;
     justify-content: center;
